# word-freq

./: .gitignore  CMakeLists.txt  ChunkProcessor.cpp  ChunkProcessor.hpp  Constants.hpp  GlobalSignals.hpp  README.md  Signal.hpp  WordFreqApp.cpp  WordFreqApp.hpp  generate_test_data.py  main.cpp  sha256.hpp
